--- a/Platzi-games/landing.pug
+++ b/Platzi-games/landing.pug
@@ -1,5 +1,13 @@
 -var titulo = "Titulo Principal"
--var titulos = ["Titulo Principal", "Subtitulo 1", "Subtitulo 2" , "Subtitulo 3"]
+-var titulos = ["Subtitulo 1", "Subtitulo 2" , "Subtitulo 3"]
+-var lorem = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ex mi, gravida sit amet imperdiet vel, sodales a mi. Proin sit amet tellus nec nisl bibendum ornare nec at augue. Integer semper feugiat varius."
+mixin caja(imagen, titulo, contenido)
+  .caja
+    .caja__imagen: img(src="images/" + imagen)
+    .caja__contenido
+      h3 #{titulo}
+      p #{contenido} 
+      
 doctype html
 html
   head
@@ -8,16 +16,19 @@ html
   body 
     header
       h1 PlatziGames
-      a.boton Registro
+      if usuario 
+        a Hola #{usuario}
+      else
+        a.boton Registro
     section.intro
       .intro__imagen: img(src="images/imagen.png")
       .intro__contenido
-        h2 #{titulos[0]}
-        p 
-          | Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          | Proin ex mi, gravida sit amet imperdiet vel, sodales a mi. 
-          | Proin sit amet tellus nec nisl bibendum ornare nec at augue. 
-          | Integer semper feugiat varius.
+        h2 #{titulo}
+        p #{lorem}
         span Proin sed urna quis orci interdum rutrum. Integer rhoncus finibus nunc, ac porttitor ex dapibus ac.
         a.boton Leer Mas
+    main.contenido
+      each i in titulos
+        +caja('imagen.png', i, lorem)
+
 
