--- a/Platzi-games/landing.pug
+++ b/Platzi-games/landing.pug
@@ -1,25 +1,5 @@
--var titulo = "Titulo Principal"
--var titulos = ["Subtitulo 1", "Subtitulo 2" , "Subtitulo 3"]
--var lorem = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ex mi, gravida sit amet imperdiet vel, sodales a mi. Proin sit amet tellus nec nisl bibendum ornare nec at augue. Integer semper feugiat varius."
-mixin caja(imagen, titulo, contenido)
-  .caja
-    .caja__imagen: img(src="images/" + imagen)
-    .caja__contenido
-      h3 #{titulo}
-      p #{contenido} 
-      
-doctype html
-html
-  head
-    meta(charset='UFT-8')
-    link(rel='stylesheet', href='css/ejercicio-pug.css')
-  body 
-    header
-      h1 PlatziGames
-      if usuario 
-        a Hola #{usuario}
-      else
-        a.boton Registro
+extend componentes/plantilla.pug
+block contenido
     section.intro
       .intro__imagen: img(src="images/imagen.png")
       .intro__contenido
